name:                threefish
version:             0.1
synopsis:            Pure Haskell implementation of the Threefish block cipher and the Skein hash function built upon it.
-- description:         
homepage:            http://github.com/valderman/threefish
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Codec
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Crypto.Skein,
    Crypto.Cipher.Threefish
  other-modules:
    Crypto.Cipher.Threefish.Mix,
    Crypto.Cipher.Threefish.Threefish256,
    Crypto.Cipher.Threefish.Common,
    Crypto.Cipher.Threefish.UBI,
    Crypto.Cipher.Threefish.Threefish512,
    Crypto.Cipher.Threefish.Class
  other-extensions:
    BangPatterns,
    MultiParamTypeClasses,
    FunctionalDependencies
  build-depends:
    base >=4.6,
    bytestring >=0.10,
    cereal >=0.3,
    array >=0.4,
    crypto-api >=0.12,
    tagged >=0.4,
    data-default >=0.5
  default-language:    Haskell2010
