name:                threefish
version:             0.1
synopsis:            The Threefish block cipher and the Skein hash function plus PRNG for Haskell.
-- description:         
homepage:            http://github.com/valderman/threefish
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Codec, Cryptography
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Crypto.Threefish,
    Crypto.Threefish.Random,
    Crypto.Threefish.Skein
  other-modules:
    Crypto.Threefish.Common,
    Crypto.Threefish.Mix,
    Crypto.Threefish.Threefish256,
    Crypto.Threefish.Threefish512,
    Crypto.Threefish.UBI
  other-extensions:
    BangPatterns,
    MultiParamTypeClasses,
    FunctionalDependencies
  build-depends:
    base >=4.6,
    bytestring >=0.10,
    cereal >=0.3,
    array >=0.4,
    crypto-api >=0.12,
    tagged >=0.4,
    data-default >=0.5,
    random,
    entropy >= 0.2.2.2
  default-language:    Haskell2010
  ghc-options: -Wall -O2
  cc-options: -O2
  include-dirs: cbits
  c-sources:
    cbits/threefish256.c,
    cbits/skein256.c,
    cbits/ubi.c
